--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
 <!doctype html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Future Seeing</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<header>
+  <img src="Pictures/Future Seeing(Dark).jpeg" width="80px" height="60px" alt="">
+  <h1>Future Seeing</h1>
+</header>
+<!-- Title -->
+<section class="Title"><div style="text-align: center;">
+<h1>Future Seeing</h1>
+<img src="Pictures/Future Seeing(Light).jpeg" width="400" height="300" alt="Logo">
+</section></div>
+<!-- About News -->
+<section class="News">
+  <h1 class="bigger">News</h1>
+  <p>2023/7/22(Sat)ページ開設</p>
+</section>
+<section class="HyperLinks">
+<a href=""></a>
+</section>
+<footer>
+  <h1>&copy;Future Seeing</h1>
+</footer>
+</html>
