--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <header>
-  <img src="=Future Seeing(Dark).jpeg" width="80px" height="60px" alt="">
+  <img src="=Future\ Seeing(Dark).jpeg" width="80px" height="60px" alt="">
   <h1>Future Seeing</h1>
 </header>
 <!-- Title -->
 <section class="Title"><div style="text-align: center;">
 <h1>Future Seeing</h1>
-<img src="=Future Seeing(Light).jpeg" width="400" height="300" alt="Logo">
+<img src="=Future\ Seeing(Light).jpeg" width="400" height="300" alt="Logo">
 </section></div>
 <!-- About News -->
 <section class="News">
