--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <header>
   <img src="FutureSeeing(Light).jpeg" width="80px" height="60px" alt="">
-  <h1>Future Seeing</h1>
+  <h1 id="Title">Future Seeing</h1>
 </header>
 <!-- Title -->
 <section class="Title"><div style="text-align: center;">
