--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <header>
-  <img src="FutureSeeing(Light).jpeg" width="80px" height="60px" alt="">
+  <img src="FutureSeeing(Dark).jpeg" width="80px" height="60px" alt="">
   <h1 id="Title">Future Seeing</h1>
 </header>
 <!-- Title -->
