--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <!-- About News -->
 <section class="News">
   <h1 class="bigger">News</h1>
+  <p>Visual Studio Code が壊れた...助けて...</p>
   <p>2023/09/28(Thu)FutureShell完成</p>
   <p>2023/7/22(Sat)ページ開設</p>
 </section>
